--- a/mediplus_backend/app/static/app/css/styles.css
+++ b/mediplus_backend/app/static/app/css/styles.css
@@ -40,6 +40,13 @@ body {
     font-size: 20px;
 }
 
+.fab {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    padding: 6px;
+}
+
 /* PRELOADER */
 #preloader {
     position: fixed;
