--- a/mediplus_backend/app/templates/app/products.html
+++ b/mediplus_backend/app/templates/app/products.html
@@ -6,74 +6,74 @@ Medi Plus | Products
 <section id="products" class="products py-1 mt-5">
     <div class="container-fluid">
         <div class="row">
-        <div class="col-lg-2 col-md-12">
-            <form action="/products/" method="get" id="filter-products-form">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-6 mb-2">
-                            <div class="form-floating">
-                                <select name="brand__name" id="brand-name" value="" class="form-control form-select" placeholder="brand name">
-                                    <option value="">All</option>
-                                    {% for brand in company.brands %}
-                                    <option value="{{brand.name}}">{{brand.name}}</option>
-                                    {% endfor %}
-                                </select>
-                                <label for="brand-name">Brand</label>
+            <div class="col-lg-2 col-md-12 filter-form-container">
+                <form action="/products/" method="get" id="filter-products-form">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-6 mb-2">
+                                <div class="form-floating">
+                                    <select name="brand__name" id="brand-name" value="" class="form-control form-select" placeholder="brand name">
+                                        <option value="">All</option>
+                                        {% for brand in company.brands %}
+                                        <option value="{{brand.name}}">{{brand.name}}</option>
+                                        {% endfor %}
+                                    </select>
+                                    <label for="brand-name">Brand</label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-lg-12 col-md-6 mb-2">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" name="name__icontains" id="product-name" placeholder="name" />
-                                <label for="product-name">Name</label>
+                            <div class="col-lg-12 col-md-6 mb-2">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" name="name__icontains" id="product-name" placeholder="name" />
+                                    <label for="product-name">Name</label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-lg-12 col-md-6 mb-2">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" name="description__icontains" id="product-description" placeholder="description" />
-                                <label for="product-description">Description</label>
+                            <div class="col-lg-12 col-md-6 mb-2">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" name="description__icontains" id="product-description" placeholder="description" />
+                                    <label for="product-description">Description</label>
+                                </div>
                             </div>
-                        </div>
-                        <!--
-                        <div class="col-sm-12 mb-2">
-                            <div class="form-floating">
-                                <select name="category__in" id="category-name" class="form-control form-select" style="height: 8rem;" placeholder="category name" multiple="multiple">
-                                    <option value="">All</option>
-                                    {% for category in company.categories %}
-                                    <option value="{{category.pk}}">{{category.name}}</option>
-                                    {% endfor %}
-                                </select>
-                                <label for="category-name">Category</label>
+                            <!--
+                            <div class="col-sm-12 mb-2">
+                                <div class="form-floating">
+                                    <select name="category__in" id="category-name" class="form-control form-select" style="height: 8rem;" placeholder="category name" multiple="multiple">
+                                        <option value="">All</option>
+                                        {% for category in company.categories %}
+                                        <option value="{{category.pk}}">{{category.name}}</option>
+                                        {% endfor %}
+                                    </select>
+                                    <label for="category-name">Category</label>
+                                </div>
                             </div>
-                        </div>
-                        -->
-                        <div class="col-lg-12 col-md-2 col-sm-6 mb-2">
-                            <div class="form-floating">
-                                <input type="number" name="price__gte" id="min-price" class="form-control" value="0" min="0" placeholder="0.00" />
-                                <label for="min-price">Min Price</label>
+                            -->
+                            <div class="col-lg-12 col-md-2 col-sm-6 mb-2">
+                                <div class="form-floating">
+                                    <input type="number" name="price__gte" id="min-price" class="form-control" value="0" min="0" placeholder="0.00" />
+                                    <label for="min-price">Min Price</label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-lg-12 col-md-2 col-sm-6 mb-2">
-                            <div class="form-floating">
-                                <input type="number" name="price__lte" id="max-price" class="form-control" value="0" min="0" placeholder="0.00" />
-                                <label for="max-price">Min Price</label>
+                            <div class="col-lg-12 col-md-2 col-sm-6 mb-2">
+                                <div class="form-floating">
+                                    <input type="number" name="price__lte" id="max-price" class="form-control" value="0" min="0" placeholder="0.00" />
+                                    <label for="max-price">Min Price</label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-lg-12 col-md-2 col-sm-6 mb-2">
-                            <label for="per-page" class="form-label">Per Page</label>
-                            <input type="range" id="per-page" name="per_page" class="form-range" value="20" min="10" max="100" step="5" />
-                        </div>
-                        <div class="col-sm-12 col-md-2">
-                            <button class="btn btn-success mx-auto" type="submit">Filter <i class="bx bx-filter"></i></button>
+                            <div class="col-lg-12 col-md-2 col-sm-6 mb-2">
+                                <label for="per-page" class="form-label">Per Page</label>
+                                <input type="range" id="per-page" name="per_page" class="form-range" value="20" min="10" max="100" step="5" />
+                            </div>
+                            <div class="col-sm-12 col-md-2">
+                                <button class="btn btn-success mx-auto" type="submit">Filter <i class="bx bx-filter"></i></button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </form>
-        </div>
+                </form>
+            </div>
         <div class="col-lg-10 col-md-12">
             <div class="container-fluid">
                 <div class="row">
                     {% for product in page %} 
-                        <div class="col-lg-4 col-md-6 my-1">
+                        <div class="col-lg-4 col-md-6 my-2">
                             <div class="card product" product-name="{{product.name}}" product-id="{{product.id}}" product-selling-price="{{product.selling_price}}" product-quantity="{{product.quantity}}" style="width: 18rem;">
                                 <img src="{% firstof product.image '/static/app/img/pillsn3.jpeg' %}" class="card-img-top" style="height: 15rem;" alt="...">
                                 <div class="card-body">
@@ -132,13 +132,5 @@ Medi Plus | Products
 
     </div>
 </section>
-<style>
-    .fab {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        padding: 6px;
-    }
-</style>
 
 {% endblock body %}
